Bug 451893 - uniquifyDocNames loops infinitely if one path is contained inside the other
Summary: uniquifyDocNames loops infinitely if one path is contained inside the other
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 464369 465834 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-25 14:54 UTC by David Redondo
Modified: 2023-02-16 13:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Redondo 2022-03-25 14:54:04 UTC
run kate /etc/xdg/kdeglobals ~/etc/xdg/kdeglobals, watch cpu spin at 100%
Comment 1 Christoph Cullmann 2022-03-25 17:00:59 UTC
Git commit b70a9653371057fd6bc50ecfefab1e31f16041c9 by Christoph Cullmann.
Committed on 25/03/2022 at 17:00.
Pushed by cullmann into branch 'master'.

fix wrap of search for slash

if we found slash at 0, we will again wrap over to end by 0 - 1
in the next round

this leads to endless looping for e.g.

kate /etc/xdg/kdeglobals ~/etc/xdg/kdeglobals

M  +2    -2    src/document/katedocument.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/b70a9653371057fd6bc50ecfefab1e31f16041c9
Comment 2 Waqar Ahmed 2023-01-16 11:12:32 UTC
*** Bug 464369 has been marked as a duplicate of this bug. ***
Comment 3 Waqar Ahmed 2023-02-16 13:48:51 UTC
*** Bug 465834 has been marked as a duplicate of this bug. ***