fix wrap of search for slash

if we found slash at 0, we will again wrap over to end by 0 - 1
in the next round

this leads to endless looping for e.g.

kate /etc/xdg/kdeglobals ~/etc/xdg/kdeglobals

BUG: 451893